Project works as indicated in the readme